# pngme

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: test.yml
crates/pngme/: Cargo.toml
crates/pngme-cli/: Cargo.toml
crates/pngme-cli/src/: main.rs
crates/pngme-gui/: Cargo.toml
crates/pngme-gui/src/: main.rs
crates/pngme-python/: Cargo.toml  README.md  pyproject.toml
crates/pngme-python/src/: lib.rs
crates/pngme-python/tests/: test_pngme.py
crates/pngme-www/: Cargo.toml  bacon.toml
crates/pngme-www/src/: handlers.rs  main.rs  views.rs
crates/pngme/src/: chunk.rs  chunk_type.rs  lib.rs  png.rs
src/: args.rs  chunk.rs  chunk_type.rs  commands.rs  lib.rs  main.rs  png.rs
src/cli/: main.rs
src/gui/: main.rs
