cargo-features = ["codegen-backend"]

[package]
name = "pngme"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"], optional = true }
crc = "3.2.1"
eframe = { version = "0.30.0", optional = true }
nom = "7.1.3"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
], optional = true }
rfd = { version = "0.15", optional = true }

[lib]
name = "pngme_lib"
path = "src/lib.rs"

[features]
build-cli = ["clap"]
build-gui = ["eframe", "env_logger", "rfd"]

[[bin]]
name = "pngme-cli"
path = "src/cli/main.rs"
required-features = ["build-cli"]

[[bin]]
name = "pngme-gui"
path = "src/gui/main.rs"
required-features = ["build-gui"]

[profile.dev]
codegen-backend = "cranelift"
