# cargo-features = ["codegen-backend"]

[workspace]
members = [
    "crates/pngme",
    "crates/pngme-cli",
    "crates/pngme-gui",
    "crates/pngme-python",
]
resolver = "2"

[workspace.package]
authors = ["Rob Hand <146272+sinon@users.noreply.github.com>"]
version = "0.0.2"
edition = "2021"
license = "MIT"
keywords = ["rust", "png"]
homepage = "https://github.com/sinon/pngme"
repository = "https://github.com/sinon/pngme"

[workspace.dependencies]
pyo3 = { version = "0.23" }
pyo3-build-config = { version = "0.23" }


# [profile.dev]
# codegen-backend = "cranelift"
