[package]
name = "pngme-cli"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
pngme = { path = "../pngme" }


[[bin]]
name = "pngme-cli"
path = "src/main.rs"
