[project]
name = "pngme-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ email = "146272+sinon@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = ["maturin>=1.7.8"]


[tool.maturin]
module-name = "pngme"
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]
