[package]
name = "pngme"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.93"
nom = "7.1.3"
crc = "3.2.1"

[lib]
name = "pngme_lib"
path = "src/lib.rs"
