[package]
name = "pngme"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
nom = "7.1.3"
crc = "3.2.1"
snafu = "0.8.5"

[lib]
name = "pngme_lib"
path = "src/lib.rs"
